<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="acessar">Acessar</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="digite_seu_nome">Digite seu Nome</string>
    <string name="confirme_a_senha">Confirme sua Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="buscar">Buscar</string>
    <string name="minhas_listas">Minhas Listas</string>
    <string name="logout">Logout</string>
    <string name="voltar">Voltar</string>
    <string name="tituloItem">Título</string>
    <string name="imagem_da_lista">Imagem da lista</string>
    <string name="adicionar">Adicionar</string>
    <string name="titulo_da_lista">Titulo da Lista</string>
    <string name="editar">Editar</string>
    <string name="imagem_da_categoria">imagem da categoria</string>
    <string name="quantidade">quantidade</string>
    <string name="nome_produto">Nome Produto</string>
    <string name="deletar">Deletar</string>
    <string name="cadastrar_item">Cadastrar Item</string>
    <string name="nome_do_item">Nome do Item</string>
    <string name="unidade_exemplo_kg_l">Unidade(exemplos: kg,L,un)</string>
    <string name="categoria">Categoria</string>
    <string name="selecione_a_categoria">Selecione a categoria</string>
    <string name="excluir_lista">Excluir Lista</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>

    <string-array name="categorias_array">
        <item>Carne</item>
        <item>Fruta</item>
        <item>Verdura</item>
        <item>Legume</item>
        <item>Snacks</item>
        <item>Sapato</item>
        <item>Roupa</item>
        <item>Outros</item>
    </string-array>


</resources>