<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antiFlashWhite"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_listify_logo"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        />

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:textColor="@color/eerieBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:textColor="@color/eerieBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLogin"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
        android:id="@+id/btnAcessar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acessar"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/default_button"
        android:textColor="@color/eerieBlack"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/btnCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/btnEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/emerald"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/editSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        android:textColor="@color/darkCyan"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/transparent_button"
        android:foreground="?attr/selectableItemBackground"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>