<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/itemImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagem_da_categoria"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_outros_24px"
        app:layout_constraintEnd_toStartOf="@id/layoutProdutos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/layoutProdutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemImagem"
        >
        <TextView
            android:id="@+id/nomeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_produto"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/eerieBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/quantidadeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxItem"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>