<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contaCadastroScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContaCadastroActivity">

    <TextView
        android:id="@+id/tituloContaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/crie_sua_conta"
        android:textColor="@color/chryslerBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_corner"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/eerieBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloContaCadastro" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_corner"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/eerieBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="Digite sua senha aqui!"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSenha1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBuscar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/confirme_a_senha"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>