<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listaScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaActivity">

    <TextView
        android:id="@+id/tituloLista"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/caribbeanCurrent"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="NameOfList"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/rounded_corner"
        android:hint="Nome da sua lista"
        app:layout_constraintTop_toBottomOf="@id/tituloLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imagem_da_lista"
        android:id="@+id/imageView"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corner"
        android:src="@drawable/ic_default_imagem"
        app:layout_constraintTop_toBottomOf="@+id/editLista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAdicionar"
        app:layout_constraintDimensionRatio="H,1:1"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddImageLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:layout_margin="20dp"
        android:backgroundTint="@color/emerald"
        android:src="@drawable/ic_mais_24px"/>

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/default_button"
        android:textColor="@color/eerieBlack"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/excluir_lista"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FF0000"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnAdicionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>