<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/buscar"
            app:boxStrokeColor="@color/emerald"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnLogout"
            app:startIconDrawable="@drawable/ic_lupa_16px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/default_button"
            android:text="@string/logout"
            android:textColor="@color/eerieBlack"
            android:drawableLeft="@drawable/ic_logout_24px"
            app:backgroundTint="@null"
            app:layout_constraintTop_toTopOf="@id/textBuscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textBuscar"
            app:layout_constraintBottom_toBottomOf="@id/textBuscar"
            />

        <TextView
            android:id="@+id/textTituloHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/minhas_listas"
            android:textColor="@color/caribbeanCurrent"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textBuscar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTituloHome"
        tools:listitem="@layout/activity_item_lista"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:backgroundTint="@color/emerald"
        android:src="@drawable/ic_mais_24px"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
