<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemProdutoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/buscar"
        app:boxStrokeColor="@color/emerald"
        app:endIconTint="@color/eerieBlack"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/btnEditar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_lupa_24px"
        app:startIconTint="@color/eerieBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/eerieBlack"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/emerald"
        android:text="@string/editar"
        android:textAllCaps="false"
        app:icon="@drawable/ic_lapis_24px"
        app:strokeColor="@color/emerald"
        app:iconTint="@color/eerieBlack"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toTopOf="@id/textBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textBuscar"
        app:layout_constraintBottom_toBottomOf="@id/textBuscar"
        />

    <TextView
        android:id="@+id/textTituloHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/titulo_da_lista"
        android:textColor="@color/caribbeanCurrent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textBuscar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTituloHome"
        tools:listitem="@layout/activity_item_lista"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:backgroundTint="@color/emerald"
        android:src="@drawable/ic_mais_24px"/>

</androidx.constraintlayout.widget.ConstraintLayout>